  communities" portlet.

- LP #422571 Added convert_entities function to karl.views.utils.  Updated atom
  entry adapters to convert entities in content.

- LP #422572 Made some changes to atom feed based on feed validator
  recommendations: Added "updated" element to feed.  Added rel="self" attribute
  to "link" elements.

3.13 (2009-08-26)
-----------------

- Ignore emails with a header that indicates they were auto-generated,
  such as out of office replies.  Like Mailman, Karl now looks for the
  non-standard but widely supported Precedence header, as well as the
  new, standard Auto-Submitted field.

3.12 (2009-08-19)
-----------------

- LP #413137 Export as CSV was producing a unicode header; WSGI only accepts
  byte strings.

- LP #399427 Removed send_alert field from ICommunityContent interface.

- LP #399427 Allow use of default for Alerts utility, making registration
  unnecessary except to shim in a dummy test implementation in unittests.

- LP #412463 Publish atom feeds as escaped HTML rather than embedded XHTML.

3.11 (2009-08-17)
-----------------

- LP #414799 Made system name configurable in Karl error page wsgi middleware.

- LP #414799 Scrubbed 'KARL' from UI.

3.10 (2009-08-12)
-----------------

- LP #412478 In mail-in, replace empty message body with warning message.

3.9 (2009-08-11)
----------------

- LP #408946: Give visual LS feedback and pause on multiple words

- LP #409495: Fix broken General KARL Error Screen in IE

- Disabled browser form autocomplete in the add user form (without this,
  the browser fills the password field with the current user's password).

- Log more info about dropped email messages.

- Made the mail white list case-insensitive.

3.8 (2009-08-06)
----------------

- Removed OSI-specific change password link logic from edit_profile view.

- The peopleconf utility now has the option to force reindexing of the
  people directory catalog.

- LP #409408: IE refuses to download files over HTTPS when the